--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@ body {
   transform: rotate(45deg);
   box-sizing: border-box;
   display: none;
+  background-color: rgb(42, 105, 94);
 }
 
 .loader::before {
